	PR target/55257 	* config/cris/cris.c (cris_asm_output_mi_thunk): Call 	final_start_function and final_end_function.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@193467 138bc75d-0d04-0410-961f-82ee72b054a4